Fix card cut-off on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -250,6 +250,9 @@ main.apps {
         margin-right: auto;
         .card {
             max-width: 170px;
+						@media screen and (max-width: 500px) {
+							max-width: 140px;
+  					}
 						margin: 5px;
             img {
                 width:100%;
